# qiluqa

./: .gitignore  CODE_REVIEW.md  CONFIG_README.md  MODELS_README.md  PROJECT_REVIEW.md  README.md  SERVICE_README.md  api.py  main.py  pyproject.toml  pyrightconfig.json
.serena/: project.yml
config/: base_config.py  base_config_chatglm4.py  base_config_dashscope.py  base_config_deepseek.py  base_config_model_type.py  base_config_openai.py  base_config_vector.py  loguru_config.py
config/prod/: prod_base_config.py  prod_config_dashscope.py  prod_config_deepseek.py  prod_config_mysql.py  prod_config_postgres.py  prod_config_redis.py
config/test/: test_base_config.py  test_config_dashscope.py  test_config_deepseek.py  test_config_mysql.py  test_config_postgres.py  test_config_redis.py
content/: filter_book.py  prompt_template.py  prompt_template_ali.py  prompt_template_chat.py  prompt_template_cv.py
custom/amway/: README.md  amway_api.py  amway_config.py  amway_custom.py
custom/bespin/: README.md  bespin_api.py  bespin_sample_service.py
custom/haleon/: README.md  haleon_api.py  haleon_config.py  haleon_custom.py
demo/: example.txt  map_reduce.py  search_agent.py  search_agent_astream.py  transform_chain.py
framework/: api_model.py  business_code.py  business_except.py
framework/redis/: redis_client.py
framework/util/: aes_256.py  dict_util.py  id_worker.py
models/chains/: chain_model.py
models/chatai/: convert_message.py
models/embeddings/: es_model_adapter.py
models/llms/: llms_adapter.py
models/vectordatabase/: base_vector_client.py  v_client.py  vector_postgres_client.py
service/: base_chat_message.py  base_compose_bot.py  bot_service.py  chat_private_service.py  chat_public_service.py  chat_response.py  intention_recognition.py  local_repo_service.py  map_reduce_summarizer.py  medical_question_optimizer.py  search_service.py
service/domain/: ai_bot_namespace_relation.py  ai_chat_bot.py  ai_chat_history.py  ai_chat_history_files_summary.py  ai_chat_images.py  ai_disclaimer.py  ai_namespace.py  ai_namespace_excel.py  ai_namespace_file.py  ai_namespace_file_chunk_strategy.py  ai_namespace_file_image.py  ai_namespace_network.py  ai_prohibited.py
(+58 files in other folders)
